[package]
edition = "2021"
name = "paradise-resource-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = {version = "^0", features = ["json", "headers"]}
axum-debug = {version = "0.3"}
dotenv = "0.15"
env_logger = {version = "0.9"}
futures-util = "0.3"
log = {version = "^0"}
serde = {version = "1", features = ["derive"]}
thiserror = {version = "1"}
tokio = {version = "1", features = ["full"]}
tower = {version = "^0.4"}
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "stream", "socks"] }
regex = "1"
lazy_static = "1.4.0"
serde_json = "1.0"
anyhow = "1.0"
nipper = "0.1.9"
js-sandbox = "0.1.6"
headers = "^0.3"
url = {version = "2"}

[target.'cfg(unix)'.dependencies]
daemonize-me = "1"